# habanga

./: .gitattributes  .gitignore  .gitmodules  .hlint.yaml  .lfsconfig  README.md  cabal.project  cabal.project.local  habanga.cabal  hie.yaml
.githooks/: post-checkout  post-commit  post-merge  pre-push
.github/docker/: habanga-ci.dockerfile  habanga-deps.dockerfile
.github/workflows/: haskell-ci.yml
app/: Cards.hs  Game.hs
art/: fond-écran.kra
art/comfyui/: actifs-jeu-z-image-turbo-canny.json  actifs-jeu-z-image-turbo-img2img.json  actifs-jeu-z-image-turbo.json  generer_cartes_numerotees.py  prompts.txt  soumettre.py
resources/habanga-tui/: Habanga-title.txt  habanga-bluecard-10x15.txt  habanga-bluecard-35x53.txt  habanga-purplecard-10x15.txt  habanga-purplecard-35x53.txt  habanga-redcard-10x15.txt  habanga-redcard-35x53.txt  habanga-yellowcard-10x15.txt  habanga-yellowcard-35x53.txt
src/core/: Cards.hs  Game.hs  GameState.hs  I18n.hs  Network.hs  NetworkState.hs  OnlineGame.hs  Random.hs
src/core/I18n/: En.hs  Fr.hs  Types.hs
src/gui/: Main.hs  MainMenu.hs  MenuState.hs  ProgramState.hs  Textures.hs
src/gui/Textures/: Menu.hs
src/tools/node/: Main.hs  Node.hs
src/tui/: BrickNetworkBridge.hs  GameView.hs  Main.hs  MainMenu.hs  ProgramState.hs  Widgets.hs
