cabal-version: 2.4
name:          habanga
version:       0.1.0.0

-- A short (one-line) description of the package.
synopsis:      Le jeu Cabanga implanté en Haskell

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:        Simon Désaulniers
maintainer:    sim.desaulniers@gmail.com
license:       GPL-3.0-or-later

-- A copyright notice.
-- copyright:
-- category:
data-files:    
               resources/habanga-tui/habanga-bluecard-10x15.txt
               resources/habanga-tui/habanga-bluecard-35x53.txt
               resources/habanga-tui/habanga-purplecard-10x15.txt
               resources/habanga-tui/habanga-purplecard-35x53.txt
               resources/habanga-tui/habanga-redcard-10x15.txt
               resources/habanga-tui/habanga-redcard-35x53.txt
               resources/habanga-tui/Habanga-title.txt
               resources/habanga-tui/habanga-yellowcard-10x15.txt
               resources/habanga-tui/habanga-yellowcard-35x53.txt

common common-lang
    default-language:   Haskell2010
    ghc-options:        -Wall -Wcompat -Wincomplete-record-updates
                        -Wincomplete-uni-patterns -Wredundant-constraints

common common-base
    build-depends:      base ^>=4.17.2.1,
                        transformers,
                        lens,
                        mtl,
                        data-default

library habanga-core
    import:             common-base,
                        common-lang
    exposed-modules:    Game
                        Cards
                        GameState
    build-depends:      random
    hs-source-dirs:     src/core

executable habanga-tui
    import:             common-base,
                        common-lang
    main-is:            Main.hs
    other-modules:      ProgramState,
                        MainMenu,
                        GameView,
                        Widgets
                        Paths_habanga
    autogen-modules:    Paths_habanga
    build-depends:      habanga-core,
                        containers,
                        brick,
                        vty >=6.0,
                        vty-crossplatform
    hs-source-dirs:     src/tui
    ghc-options:        -threaded

