cabal-version: 2.4
name:          habanga
version:       0.1.0.0

synopsis:      Le jeu Cabanga implanté en Haskell

category: game

description:   Habanga est une implantation en Haskell du jeu de société
               Cabanga. Le paquet fournit pour le moment une interface texte de
               base.

               Le jeu ne peut présentement fonctionner seulement qu'avec des
               joueurs utilisant le même processus, mais sera jouable en
               multijoueur dans le futur lorsque le mode en ligne sera implanté.

               Évidemment, une interface graphique sera aussi écrite dans le
               futur pour une meilleure expérience.

author:        Simon Désaulniers
maintainer:    sim.desaulniers@gmail.com
license:       GPL-3.0-or-later

data-files:
               resources/habanga-tui/habanga-bluecard-10x15.txt
               resources/habanga-tui/habanga-bluecard-35x53.txt
               resources/habanga-tui/habanga-purplecard-10x15.txt
               resources/habanga-tui/habanga-purplecard-35x53.txt
               resources/habanga-tui/habanga-redcard-10x15.txt
               resources/habanga-tui/habanga-redcard-35x53.txt
               resources/habanga-tui/Habanga-title.txt
               resources/habanga-tui/habanga-yellowcard-10x15.txt
               resources/habanga-tui/habanga-yellowcard-35x53.txt

source-repository head
  type: git
  location: https://github.com/sim590/habanga/

common common-lang
    default-language:   Haskell2010
    ghc-options:        -Wall -Wcompat -Wincomplete-record-updates
                        -Wincomplete-uni-patterns -Wredundant-constraints

common common-base
    build-depends:      base ^>=4.17.2.1,
                        transformers >= 0.5.6 && < 0.6,
                        lens >= 5.3.3 && < 5.4,
                        mtl >= 2.2.2 && < 2.3,
                        data-default >= 0.8.0 && < 0.9

library habanga-core
    import:             common-base,
                        common-lang
    exposed-modules:    Game
                        Cards
                        GameState
    build-depends:      random >= 1.2.1 && < 1.3
    hs-source-dirs:     src/core

executable habanga-tui
    import:             common-base,
                        common-lang
    main-is:            Main.hs
    other-modules:      ProgramState,
                        MainMenu,
                        GameView,
                        Widgets
                        Paths_habanga
    autogen-modules:    Paths_habanga
    build-depends:      habanga-core,
                        containers >= 0.6.7 && < 0.7,
                        text >= 2.0.2 && < 2.1,
                        brick >= 2.6 && < 2.7,
                        vty >= 6.2 && < 6.3,
                        vty-crossplatform >= 0.4.0 && < 0.5
    hs-source-dirs:     src/tui
    ghc-options:        -threaded

