cabal-version: 2.4
name:          habanga
version:       0.1.0.0

synopsis:      Le jeu Cabanga implémenté en Haskell

category: game

description:   Habanga est une implémentation en Haskell du jeu de société
               Cabanga. Le paquet fournit pour le moment une interface texte de
               base.

               Le jeu ne peut présentement fonctionner seulement qu'avec des
               joueurs utilisant le même processus, mais sera jouable en
               multijoueur dans le futur lorsque le mode en ligne sera
               implémenté.

               Évidemment, une interface graphique sera aussi écrite dans le
               futur pour une meilleure expérience.

author:        Simon Désaulniers
maintainer:    sim.desaulniers@gmail.com
license:       GPL-3.0-or-later

extra-source-files:
               resources/habanga-tui/habanga-bluecard-10x15.txt
               resources/habanga-tui/habanga-bluecard-35x53.txt
               resources/habanga-tui/habanga-purplecard-10x15.txt
               resources/habanga-tui/habanga-purplecard-35x53.txt
               resources/habanga-tui/habanga-redcard-10x15.txt
               resources/habanga-tui/habanga-redcard-35x53.txt
               resources/habanga-tui/Habanga-title.txt
               resources/habanga-tui/habanga-yellowcard-10x15.txt
               resources/habanga-tui/habanga-yellowcard-35x53.txt

source-repository head
  type: git
  location: https://github.com/sim590/habanga/

common common-lang
    default-language:   Haskell2010
    ghc-options:        -Wall -Wcompat -Wincomplete-record-updates
                        -Wincomplete-uni-patterns -Wredundant-constraints

common common-base
    build-depends:      base         ^>= 4.17.2.1,
                        transformers ^>= 0.5.6,
                        lens         ^>= 5.3.3,
                        mtl          ^>= 2.2.2,
                        containers   ^>= 0.6.7,
                        data-default ^>= 0.8.0,
                        stm          ^>= 2.5.1,
                        extra        ^>= 1.8,
common common-exe
    ghc-options:        -threaded

common brick
    build-depends:
                        brick             ^>= 2.6,
                        vty               ^>= 6.2,
                        vty-crossplatform ^>= 0.4.0,

library habanga-core
    import:             common-base,
                        common-lang
    exposed-modules:    Game
                        OnlineGame
                        Cards
                        GameState
                        NetworkState
                        Network
                        Random
    build-depends:      random     ^>= 1.2.1,
                        opendht-hs ^>= 0.1.0,
                        serialise  ^>= 0.2.6,
                        bytestring ^>= 0.11.5,
    hs-source-dirs:     src/core

executable habanga-node
    import:             common-base,
                        common-lang,
                        common-exe,
                        brick
    main-is:            Main.hs
    other-modules:      Node
    build-depends:      habanga-core,
                        random
    hs-source-dirs:     src/tools/node

executable habanga-tui
    import:             common-base,
                        common-lang,
                        common-exe,
                        brick
    main-is:            Main.hs
    other-modules:      ProgramState,
                        MainMenu,
                        GameView,
                        Widgets
                        BrickNetworkBridge
    build-depends:      habanga-core,
                        text       ^>= 2.0.2,
                        file-embed ^>= 0.0.16,
                        opendht-hs,
                        directory  ^>= 1.3.7,
    hs-source-dirs:     src/tui

executable habanga-gui
    import:             common-base,
                        common-lang,
                        common-exe,
    main-is:            Main.hs
    build-depends:      habanga-core,
                        opendht-hs,
                        sdl2,
                        sdl2-ttf,
                        text
    hs-source-dirs:     src/gui

